# Scientific-Computing

./: .gitignore  BasicLinuxComands.md  README.md  command_notes.md  finalproject.md  jupytertest.ipynb  pyproject.toml
ClassNotes/: 10_17.md  10_3.md  9_28.md
ClassNotes/MathieuFunctions/: Theory.md
ClassNotes/fortran/: README.md  array1.f90  arrayops (1).f90  arrayops.f90  boolean1.f90  builtinfcns.f90  circle_mod2.f90  circle_mod3Private.f90  demo1.f90  fcn1.f90  fcn1_internal.f90  ifelse1.f90  loops1.f90  loops2.f90  main.f90  vectorops.f90
ClassNotes/fortran1/: circle_main.f90
ClassNotes/fortran2/: circle.ex  circle_main3.f90  circle_mod.f90  circle_mod3.f90  fcn1_internal.f90  fcn2.f90  sub1m.mod  sub2.f90  sub3module.mod
ClassNotes/python3/: circle.py  histogram.py  invert_dictionary.py  run_fibonacci.py
SSHSetUp/: SSH_Notes.md
TutorialPrograms/: .#morefruit.txt  BasicComands.md  fruit.txt  new.txt  output.txt
TutorialPrograms/BasicCommands/: fakefile  morefruit.txt  new.txt  output.txt
TutorialPrograms/Notes/: BasicComands.md
appliedMath/: finalprojects.md
appliedMath/markdowns/: 10_17.md  10_3.md  10_5.md
astrophysics/Jupyter/: Cas-Karp-Solution.ipynb  Coupled-ODE-Solver .ipynb  Monte-carlo-integration.ipynb  Newton_Raphson_root_finding.ipynb  Romberg-integration.ipynb  (+8 more)
pandas/: Pandas-info.md  Pd-dataframe.py  Pd-read-csv.ipynb  Pd-subset-data.ipynb  titanic.xlsx
physics/: potentialWell.py
stats/: Stats.ipynb  StatsFittingCHi2.ipynb  StatsGaus.ipynb  StatsProfUnedit.ipynb
tests/: README.md  jupytertest.ipynb  pythontest.py
(+144 files in other folders)
