[tool.poetry]
name = "am129-2"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]
readme = "README.md"
packages = [{include = "am129_2"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.9.1"
numpy = "^1.23.3"
jupyterlab = "^3.4.7"
notebook = "^6.4.12"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
ipython = "^8.6.0"
sympy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
